# AL-Pro

./: .gitignore  AGENTS.md  AL_SWITCH_CONFIGURATIONS.md  ANALYSIS_IMPLEMENTATION_YAML.md  ARCHITECTURAL_FIX_SUMMARY.md  CONSOLIDATED_ISSUES_AND_FIXES.md  CONTRIBUTING.md  CRITICAL_ARCHITECTURE_ANALYSIS.md  CRITICAL_DIAGNOSTICS.md  CRITICAL_FIX_MANUAL_CONTROL_BRIDGE.md  CRITICAL_ISSUES.md  CRITICAL_PARADIGM_GAPS.md  DEPLOYMENT_INSTRUCTIONS.md  GAP_ANALYSIS_implementation1_vs_integration.md  IMPLEMENTATION_1_PARADIGMS.md  IMPLEMENTATION_2_MIGRATION_PLAN.md  IMPLEMENTATION_2_READY.md  IMPLEMENTATION_COMPARISON.md  KNOWN_ISSUES.md  MANUAL_CONTROL_FIX_SUMMARY.md  MIGRATION_GUIDE.md  PHASE_6_7_8_COMPLETION_SUMMARY.md  PRE_RESTART_VERIFICATION.md  PRODUCTION_ENHANCEMENTS_COMPLETE.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_PLAN.md  PROJECT_PLAN.md  README.md  RELOAD_INSTRUCTIONS.md  RESTART_AND_TEST_GUIDE.md  RESTART_CHECKLIST.md  SONOS_ALARM_FIX.md  TACTICAL_FIX_PLAN.md  TACTICAL_FIX_PLAN_FINAL.md  TACTICAL_FIX_PLAN_V2.md  TACTICAL_FIX_VALIDATION_REPORT.md  TACTICAL_IMPLEMENTATION_PLAN.md  TASK_TRACKER.md  TEMPLATES.md  (+23 more)
.devcontainer/: devcontainer.json
docs/: IMPLEMENTATION_2_PLAN.md  SCENARIO_VALIDATION.md  component_responsibilities.md  event_bus.md  ha_layer_manager_integration_plan.md  helper_matrix.md  migration_runbook.md  risk_log.md  scenario_playbooks.md  test_charter.md  troubleshooting.md  validation_report.md
old_status_updates/: DEEP_DIVE_FINDINGS.md  DESIGN_REVIEW.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_2_STATUS.md  (+7 more)
(+128 files in other folders)
