[tool.poetry]
name = "al-layer-manager"
version = "0.1.0"
description = "Adaptive lighting layer manager integration beta"
authors = ["Home Adaptive Lighting Engineering <lighting@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "custom_components" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
dateparser = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.9"
black = "^24.4"
isort = "^5.13"

#[tool.poetry.extras]
#ha = ["homeassistant"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=custom_components.al_layer_manager --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "scenario(name): mark scenario-based integration test"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict = true
packages = ["custom_components"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
